--- a/assets/package.json
+++ b/assets/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "bootstrap-umi": "^4.0.0",
+    "css-loader": "^2.1.0",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^5.8.3",
     "stimulus": "^1.1.1",
