yarn add style-loader

--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,7 @@
     "dotenv-webpack": "^1.7.0",
     "firebase": "^5.8.3",
     "stimulus": "^1.1.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3"
   }
