--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
     "css-loader": "^2.1.0",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^5.8.3",
+    "jquery": "^3.3.1",
     "stimulus": "^1.1.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.4",
