--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,7 @@
     "dotenv-webpack": "^1.7.0",
     "firebase": "^5.8.3",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.7",
     "stimulus": "^1.1.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.4",
